Fixing button for quantity on mobile

--- a/src/styles/detail.module.css
+++ b/src/styles/detail.module.css
@@ -47,7 +47,7 @@
     color: white;
     border: none;
     cursor: pointer;
-    font-size: 2rem;
+    font-size: 1rem;
     text-align: center;
     margin: auto;
 }
